--- a/talks/talks/2024_01-slice_winter-tidalsim.jinja2
+++ b/talks/talks/2024_01-slice_winter-tidalsim.jinja2
@@ -599,6 +599,7 @@ cycles,instret
     <li class="fragment">We propose <strong>TidalSim</strong>, a multi-level simulation methodology to enable rapid HW iteration</li>
   </ul>
   <p class="small center fragment"><a href="https://github.com/euphoric-hardware/tidalsim">TidalSim (github.com/euphoric-hardware/tidalsim)</a> <small>Forks of spike, chipyard, testchipip + top-level runner</small></p>
+  <!--<p class="small">Acknowledgements: Joonho Whangbo, Seah Kim</p>-->
   </div>
   <div style="display:grid; align-content: center; position: relative; top: -12%;">
     <img width="80%" src="./figs/dynamic/tidalsim/overview.svg" />
