--- a/talks/talks/2024_01-slice_winter-tidalsim.jinja2
+++ b/talks/talks/2024_01-slice_winter-tidalsim.jinja2
@@ -33,7 +33,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
 {% block slides %}
 <section class="center">
   <h1>TidalSim: Multi-Level Microarchitecture Simulation</h1>
-  <h3 style="font-weight: 500;">Vighnesh Iyer, Raghav Gupta, Dhruv Vaish, Charles Hong, Young-Jin Park, Bora Nikolic, Sophia Shao</h3>
+  <h3 style="font-weight: 500;">Vighnesh Iyer, Raghav Gupta, Dhruv Vaish, Charles Hong, Young-Jin Park, Sophia Shao, Bora Nikolic</h3>
   <h3 style="font-weight: normal;">SLICE Winter Retreat 2024</h3>
   <h4 style="font-weight: normal;">Wednesday, January 10th, 2024</h4>
 </section>
@@ -484,7 +484,7 @@ cycles,instret
     <h2>Results</h2>
   </section>
 
-  <section>
+  <section data-visibility="hidden">
     <h2>Clustering on Embench Benchmarks</h2>
     <ul>
       <li class="fragment">Cluster centroids indicate which basic blocks are traversed most frequently in each cluster</li>
@@ -556,7 +556,7 @@ cycles,instret
     </div>
   </section>
 
-  <section>
+  <section data-visibility="hidden">
     <h2>Dealing with Long-Lived μArch State</h2>
 
     <div class="container" style="grid-template-columns: 1fr 1fr;">
