--- a/talks/talks/quals/background.jinja2
+++ b/talks/talks/quals/background.jinja2
@@ -4,7 +4,7 @@
     <li class="fragment">An overview of simulation broadly
       <ul><li>Abstractions used in hardware modeling</li></ul>
     </li>
-    <li class="fragment">Existing microarchitectural simulators</li>
+    <li class="fragment">The limitations of existing microarchitectural simulators</li>
     <li class="fragment">Sampled simulation techniques
       <ul>
         <li>Phase behavior of programs</li>
@@ -43,7 +43,6 @@
     </li>
     <li>Outputs: execution trace/metrics - how does the architecture execute the workload? - notion of time granularity and space granularity + PPA stuff if available </li>-->
   </ul>
-
 </section>
 
 <section>
@@ -212,9 +211,27 @@
 </section>
 
 <section>
+  <h2>Which Hardware Abstraction is Suitable?</h2>
+
+  <ol class="small">
+    <li>Architectural (functional) models</li>
+    <li>Microarchitectural models (<em>"rough"</em>) with approximate state and timing</li>
+    <li>Microarchitectural models (<em>"detailed"</em>) with more refined state and timing</li>
+    <li>Register-transfer level (RTL) models with full fidelity state and timing</li>
+  </ol>
+
+  <p class="center fragment">Can't compromise on accuracy or latency to enable meaningful and fast microarchitectural iteration.</p>
+
+  <hr class="fragment">
+
+  <p class="center fragment"><strong>"detailed" uArch models</strong> or <strong>RTL</strong> are the only options for our performance simulator selection</p>
+
+</section>
+
+<section>
   <h2>Simulator Metrics</h2>
 
-  <p class="center fragment">Simulation techniques span the gamut on various axes</p>
+  <p class="center fragment">Simulation techniques span the gamut on various axes. Each simulation technique assumes <em>a particular hardware abstraction</em>.</p>
 
   <ul class="smallish">
     <li class="fragment"><strong>Throughput</strong>
@@ -242,7 +259,6 @@
 </section>
 
 <section>
-
   <!--RTL vs detailed uArch vs arch vs high-level spec
 
   We will restrict our scope to architectures which already have concrete implementations.
@@ -340,13 +356,94 @@
 
 <section>
   <h2>Can we Use Microarchitectural Simulators?</h2>
+  <!-- Consider accuracy vs speed tradeoff + implementation complexity tradeoff -->
 
   <!-- - cite paper on arch sims considered harmful
   Accuracy - discuss why this can't be really improved - need to resort to RTL for fidelity that we can trust (on PPA)
   Throughput - we can use sampling - let's discuss that -->
 
-  <p class="fragment center">If we can make uArch simulators faster and more accurate, then the problem is solved!</p>
+  <!-- <p class="fragment center">If we can make uArch simulators <strong>faster</strong> (10x off from functional simulators) and <strong>more accurate</strong>, then the problem is solved!</p>-->
 
+  <ul>
+    <li class="fragment">uArch simulators seem to satisfy most of our requirements
+      <ul>
+        <li class="fragment"><strong>Low startup latency</strong>: seconds to 1 minute</li>
+        <li class="fragment"><Strong>Metrics</strong>: IPC traces
+        <li class="fragment"><strong>Cost</strong>: minimal</li>
+      </ul>
+    </li>
+    <li class="fragment">Can we adapt uArch simulators to perform better in terms of <strong>accuracy</strong> and <strong>throughput</strong>?</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Accuracy of Microarchitectural Simulators</h2>
+
+  <!-- Want to show:
+    - simulators are generally inaccurate wrt real hardware first of all
+    - simulators disagree with each other a lot
+    - simulators poorly model the impact of various uarch changes (pipeline width, cache size, branch predictor)
+    - simulators need calibration with silicon to get decent accuracy (which is painful and doesn't prove anything about generalizability)
+  -->
+
+  <div class="center r-stack">
+    <div class="fragment fade-in-then-out" style="display: grid; place-items: center;">
+      <img src="./figs/quals/uarch_simulator_study-ipc.png" />
+      <figcaption class="small center">
+      Comparison of estimated IPC from various uArch simulators vs real IPC from Haswell.<sup>[1]</sup>
+      MAPE on MiBench: 9.5% (Sniper), 44.6% (gem5), 38.2% (PTLSim) and 47.06% (Multi2Sim).
+      </figcaption>
+    </div>
+    <div class="fragment fade-in-then-out" style="display: grid; place-items: center;">
+      <img src="./figs/quals/uarch_simulator_study-ipc2.png" />
+      <figcaption class="small center">Raw IPC errors on 64-bit workloads<sup>[2]</sup>. Simulators not only disagree with each other, but have substantial errors exceeding 20%.
+      </figcaption>
+    </div>
+    <div class="fragment fade-in-then-out" style="display: grid; place-items: center;">
+      <img src="./figs/quals/uarch_simulator_study-pipeline_width.png" />
+      <figcaption class="small center">Impact of halving the pipeline width (widths of fetch, decode, issue/rename, dispatch, and commit are halved)<sup>[2]</sup>. Simulators disagree with each other.
+      </figcaption>
+    </div>
+    <div class="fragment fade-in-then-out" style="display: grid; place-items: center;">
+      <img src="./figs/quals/uarch_simulator_study-reduced_cache_size.png" />
+      <figcaption class="small center">Impact of halving all the cache sizes<sup>[2]</sup>. Note how MARSSx86 shows <em>increased</em> IPC for some benchmarks! Again, disagreements are substantial.
+      </figcaption>
+    </div>
+    <div class="fragment fade-in-then-out" style="display: grid; place-items: center;">
+      <img src="./figs/quals/uarch_simulator_study-branch_predictor.png" />
+      <figcaption class="small center">Impact of using a bimodal branch predictor vs the Haswell BP.<sup>[2]</sup>. 
+      </figcaption>
+    </div>
+  </div>
+
+  <div class="fragment">
+  <hr>
+  <div class="verysmall">
+    <p class="footnote" style="margin:0;">
+    [1]: Akram, A. and Sawalha, L., 2016, October. x86 computer architecture simulators: A comparative study. ICCD.<br />
+    [2]: Akram, A. and Sawalha, L., 2019. A survey of computer architecture simulation techniques and tools. IEEE Access
+    </p>
+  </div>
+  </div>
+</section>
+
+<section>
+  <h2>Flexibility vs Accuracy Tradeoff of uArch Simulators</h2>
+
+  Trends aren't enough - see the sensitivity differences of these simulators! Gradients are critical!
+
+  <blockquote>
+Sniper though shows greater accuracy, is not very flexible
+
+to allow one to model new micro-architectural features
+compared to gem5. Sniper does not support full-system
+simulation and the effect of OS for applications. It is
+best use is for x86 many-core user-mode workloads. On
+the other hand, gem5 and PTLsim are more flexible and
+can be used for studies of particular microarchitectural
+blocks, and full-system workloads, with gem5 being more
+configurable and showing higher accuracy.
+</blockquote>
   <div class="fragment">
   <hr>
   <div class="verysmall">
@@ -356,6 +453,13 @@
     </p>
   </div>
   </div>
+</section>
+
+<section>
+  <h2>Selection of Simulators</h2>
+  We want to use RTL simulation as the lowest level performance simulator. But we also want to have enough throughput! How???
+
+  Let's learn from sampled simulation approaches previously explored by 
 </section>
 
 <section>
@@ -407,3 +511,11 @@
     </li>
   </ul>
 </section>
+
+<!--
+  - need high accuracy: we must use uArch/RTL as abstraction
+  - uarch/RTL necessitates: we must use then uarch or rtl sim
+  - uarch sim is inaccurate: we must use rtl sim
+  - rtl sim is slow: so what can we do about it?
+  - so we must use some kind of sampled rtl sim with functional uarch warmup models ganged with a functional isa model
+-->
